2004-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Don't work
	for the editorial and the tenjin groups when newspaper holidays.

2004-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Run w3m-mode before popping to the newly created
	buffer up.

2004-06-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-rss.el (shimbun-rss-process-date): Simplified and
	relaxed the regular expression to be used to analyze date strings.
	Thanks to Andreas Seltenreich for his report.

2004-06-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-output-coding-system): Change default value for
	w3m-m17n.

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add
	w3m-input-coding-system and w3m-output-coding-system.

2004-06-11  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-meta-content-type-charset-regexp)
	(w3m-meta-charset-content-type-regexp)
	(w3m-meta-refresh-content-regexp)
	(w3m-meta-content-refresh-regexp): Removed.
	(w3m-detect-meta-charset, w3m-remove-meta-charset-tags)
	(w3m-check-refresh-attribute): Use `w3m-parse-attributes' instead
	of above regexp.
	(w3m-rendering-buffer): Don't call `w3m-remove-meta-charset-tags'
	for w3m-m17n.

2004-06-10  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-namazu.el: Rewrite.

	* shimbun/sb-fml.el (shimbun-make-contents): Guard error at 
	unsupposed page.

2004-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.
	(w3m-safe-view-this-url): Use w3m-goto-url-new-session only when a
	user invokes this command in a buffer not being running the
	w3m-mode.

2004-06-07  Masatake YAMATO  <jet@gyve.org>

	* w3m-hist.el (w3m-history-store-position): Fix a wrong message.

2004-06-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-filter.el (w3m-filter-rules): Relax the condition.

2004-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-make-new-session): Doc fix.