@@ -1,3 +1,7 @@
+2004-05-27  Andreas Seltenreich  <seltenreich@gmx.de>
+
+	* shimbun/sb-welt-de.el: New file.
+
 2004-06-15  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Don't work
